day 29: call and apply method

--- a/valueVsRef.html
+++ b/valueVsRef.html
@@ -26,6 +26,7 @@ h1{
     CLOSER LOOK AT JS
     </h1>
     <script src="valueVsRef.js"></script>
+    <script src="callAndApply.js"></script>
 </body>
 </html>
 
